old/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP  # Keeps the pods hidden inside the cluster network
  selector:
    component: client
  ports:
    - port: 3000       # The port the service listens to inside the cluster
      targetPort: 3000 # The port on your Nginx container
